--- a/src/layouts/Authentication/style.scss
+++ b/src/layouts/Authentication/style.scss
@@ -1,6 +1,7 @@
 @import "../../assets/scss/_variables";
 
 .auth-wrapper {
+  font-family: IRANYekanX;
   h1,
   .h1,
   h2,
@@ -13,13 +14,13 @@
   .h5,
   h6,
   .h6 {
-    font-family: IRANYekanX;
+    font-family: inherit;
     color: #03041b;
   }
 
   p,
   label {
-    font-family: IRANYekanX;
+    font-family: inherit;
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.8;
@@ -112,5 +113,73 @@
     a {
       font-weight: 500;
     }
+  }
+  .auth-confirmation {
+    .card-body {
+      padding-right: 70px;
+      padding-left: 70px;
+    }
+    .auth-title {
+      font-size: 1.375em;
+      font-weight: 700;
+    }
+    .code-input-control {
+      display: flex;
+      align-items: center;
+      direction: ltr;
+    }
+    .auth-form .form-control {
+      font-size: 0.875em;
+      font-weight: 700;
+      text-align: center;
+    }
+  }
+  .auth-card.auth-card--bordered {
+    box-shadow: none;
+    border: 1px solid rgba(3, 4, 27, 0.1);
+  }
+  .btn-simple {
+    border: none;
+    background-color: transparent;
+    outline: none;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #111bff;
+    padding: 0;
+    margin: 0;
+    font-family: inherit;
+  }
+  .auth-summary {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 24px;
+    & > * {
+      margin-bottom: 0;
+    }
+    & > *:not(:last-child) {
+      margin-left: 15px;
+    }
+    & > *:last-child {
+      flex: 0 0 max-content;
+    }
+  }
+
+  .auth-counter {
+    margin-right: auto;
+    font-size: 1em;
+    font-weight: 500;
+    color: #111bff;
+  }
+
+  .auth-resend {
+    font-size: 0.875em;
+    font-weight: 700;
+    margin-right: auto;
+  }
+
+  .auth-text,
+  .auth-resend,
+  .auth-counter {
+    line-height: 26px;
   }
 }
