fix image reference in scss files of landing layout

--- a/src/layouts/Landing/Header/style.scss
+++ b/src/layouts/Landing/Header/style.scss
@@ -84,12 +84,12 @@
   &.header--landing {
     height: 862px;
     background: {
-      image: url("src/assets/img/coins/coin-eth-p.png"),
-        url("src/assets/img/coins/coin-eth-w.png"),
-        url("src/assets/img/coins/coin-btc.png"),
-        url("src/assets/img/coins/coin-usdt.png"),
-        url("src/assets/img/lay/header-pattern.png"),
-        url("src/assets/img/lay/header-bg-2.png");
+      image: url("../../../assets/img/coins/coin-eth-p.png"),
+        url("../../../assets/img/coins/coin-eth-w.png"),
+        url("../../../assets/img/coins/coin-btc.png"),
+        url("../../../assets/img/coins/coin-usdt.png"),
+        url("../../../assets/img/lay/header-pattern.png"),
+        url("../../../assets/img/lay/header-bg-2.png");
       repeat: no-repeat;
       size:
         209px 203px,
