--- a/src/layouts/Landing/style.scss
+++ b/src/layouts/Landing/style.scss
@@ -133,7 +133,7 @@ iframe {
         height: 17px;
         margin-top: 8px;
         background: {
-          image: url("src/assets/img/lay/title-border.png");
+          image: url("../../assets/img/lay/title-border.png");
           repeat: no-repeat;
           position: 45% 0;
           size: 230px 17px;
