--- a/src/layouts/Landing/Header/style.scss
+++ b/src/layouts/Landing/Header/style.scss
@@ -50,6 +50,12 @@
 
     .header__auth--register a {
       font-weight: 700;
+      font-size: 1rem;
+      padding: 0px 30px;
+      height: 56px;
+      line-height: 52px;
+      border-radius: 28px;
+      border-width: 2px;
     }
   }
 
