fix style of dashboard

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -4,10 +4,10 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-.soon
+/* .soon
 {
 background-color: #cccccc !important;
-}
+} */
 
 #copyTarget1 {font-size: 13px;}
 
