--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -273,3 +273,11 @@
     margin: 0;
   }
 }
+.activeFilterItem{
+  color: blue;  
+  border: 1px solid blue;
+  border-radius: 8px;
+}
+.diActiveFilterItem{
+  color: black;  
+}
