--- a/src/layouts/Landing/Footer/style.scss
+++ b/src/layouts/Landing/Footer/style.scss
@@ -4,7 +4,7 @@
   background-color: $footer-bg;
   padding: 200px 0 45px;
   background: {
-    image: url("src/assets/img/lay/footer-pattern.png");
+    image: url("../../../assets/images/landing/footer-bg.png");
     repeat: no-repeat;
     position: 50% 0;
   }
