--- a/src/layouts/Landing/style.scss
+++ b/src/layouts/Landing/style.scss
@@ -274,8 +274,8 @@ iframe {
 
   .landing-features {
     padding-bottom: 120px;
-    background-image: url(../img/coins/btccash.png),
-      url(../img/lay/dot-primary-33x33.png);
+    background-image: url('../../assets/img/coins/btccash.png'),
+      url('../../assets/img/lay/dot-primary-33x33.png');
     background-position:
       calc(100% - 40px) 100%,
       70px calc(100% - 82px);
