update unused file

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -11633,7 +11633,7 @@ textarea.form-control {
   font-size: 1rem;
   font-weight: 600;
   color: #335FFC;
-  background-image: url("../img/icons/angle-down-primary.svg");
+  background-image: url("../img/icons/angle-down-2.svg");
   background-repeat: no-repeat;
   background-position: 20px 50%;
 }
