update content of footer

--- a/src/layouts/Landing/Footer/style.scss
+++ b/src/layouts/Landing/Footer/style.scss
@@ -8,6 +8,9 @@
     repeat: no-repeat;
     position: 50% 0;
   }
+  .footer-text {
+    color: #fff;
+  }
 
   .social-media {
     margin-right: auto;
