--- a/src/layouts/dashboard/style.scss
+++ b/src/layouts/dashboard/style.scss
@@ -1,3 +1,126 @@
+:root {
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
+  --bs-gray-100: #f8f9fa;
+  --bs-gray-200: #e9ecef;
+  --bs-gray-300: #dee2e6;
+  --bs-gray-400: #ced4da;
+  --bs-gray-500: #adb5bd;
+  --bs-gray-600: #6c757d;
+  --bs-gray-700: #495057;
+  --bs-gray-800: #343a40;
+  --bs-gray-900: #212529;
+  --bs-primary: #335ffc;
+  --bs-secondary: #f8b635;
+  --bs-success: #0ed039;
+  --bs-info: #0dcaf0;
+  --bs-warning: #ffc107;
+  --bs-danger: #ff1f11;
+  --bs-light: #f8f9fa;
+  --bs-dark: #212529;
+  --bs-primary-rgb: 51, 95, 252;
+  --bs-secondary-rgb: 248, 182, 53;
+  --bs-success-rgb: 14, 208, 57;
+  --bs-info-rgb: 13, 202, 240;
+  --bs-warning-rgb: 255, 193, 7;
+  --bs-danger-rgb: 255, 31, 17;
+  --bs-light-rgb: 248, 249, 250;
+  --bs-dark-rgb: 33, 37, 41;
+  --bs-white-rgb: 255, 255, 255;
+  --bs-black-rgb: 0, 0, 0;
+  --bs-body-color-rgb: 33, 37, 41;
+  --bs-body-bg-rgb: 255, 255, 255;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0)
+  );
+  --bs-body-font-family: IRANYekanX;
+  --bs-body-font-size: 1rem;
+  --bs-body-font-weight: 400;
+  --bs-body-line-height: 1.5;
+  --bs-body-color: #212529;
+  --bs-body-bg: #fff;
+  --bs-border-radius: 10px;
+}
+
+p,
+label {
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.8;
+  color: #03041b;
+}
+
+.full-withraw {
+  float: left;
+  font-size: 12px;
+}
+.form-control,
+.form-control:focus {
+  box-shadow: none !important;
+  &:not(.is-invalid):hover {
+    border-color: rgba(3, 4, 27, 0.2);
+  }
+}
+.form-control {
+  font-size: 0.875rem;
+  margin-right: 0;
+}
+.form-text {
+  margin-top: 0.25rem;
+  font-size: 12px;
+  color: var(--bs-secondary-color);
+}
+
+.tab-content {
+  padding: 25px;
+}
+
+.btn {
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 18px 30px;
+  line-height: 1rem;
+  border-radius: 10px;
+  border-width: 2px;
+  &.btn-primary {
+    color: #fff;
+    background-color: #111bff;
+    border-color: #111bff;
+    &:hover {
+      color: #fff;
+      background-color: #0e17d9;
+      border-color: #0e16cc;
+    }
+  }
+  &.btn-outline-primary {
+    color: #111bff;
+    border-color: #111bff;
+    &:hover {
+      color: #fff;
+      background-color: #111bff;
+      border-color: #111bff;
+    }
+  }
+}
+
 .admin-wrapper {
   font-family: IRANYekanX;
   position: relative;
