--- a/src/components/PasswordInput/style.sass
+++ b/src/components/PasswordInput/style.sass
@@ -8,6 +8,7 @@
 
 .password-validation-check
   .ant-list-item
+    font-family: var(--bs-font-shabnam)
     border-block-end: none
 
   .check.ant-list-item-meta
