--- a/src/components/SelectCountry/style.sass
+++ b/src/components/SelectCountry/style.sass
@@ -1,3 +1,6 @@
+.ant-select-single.ant-select-lg
+    width: 100% !important
+
 .select-country-input.dropdown.bootstrap-select.bs-select-control>.ant-select-selector
     height: 46px
 
@@ -5,6 +8,10 @@
     display: flex
     flex-direction: row
     justify-content: space-around
+    font-family: var(--bs-font-shabnam)
+    &>span
+        direction: ltr
+        font-size: 13px
 
 @media only screen and (min-width: 770px)
 .phone-number-input
