--- a/src/layouts/dashboard/style.scss
+++ b/src/layouts/dashboard/style.scss
@@ -1,5 +1,5 @@
 .admin-wrapper {
-  font-family: IRANYekanX;
+  // font-family: IRANYekanX;
   position: relative;
   background-color: #fbfbfb;
   display: flex;
