--- a/src/pages/profile/AuthSection/style.sass
+++ b/src/pages/profile/AuthSection/style.sass
@@ -1,5 +1,5 @@
 .ant-typography,.ant-list .ant-list-item,.ant-alert-content,.ant-btn,.ant-modal,a
-    font-family: IranYekanX
+    // font-family: IranYekanX
 
 .ant-list .ant-list-item
     display: flex
