--- a/src/pages/auth/information/styles.css
+++ b/src/pages/auth/information/styles.css
@@ -1,5 +1,5 @@
 [class~="ant-input"]{
-    font-family: "IRANYekanX";
+    /* font-family: "IRANYekanX"; */
     font-size: 0.75em;
     font-weight: 400;
     color: rgba(3, 4, 27, 0.4);
