--- a/src/components/PasswordInput/style.sass
+++ b/src/components/PasswordInput/style.sass
@@ -18,3 +18,6 @@
   .unCheck.ant-list-item-meta
     .ant-list-item-meta-content>h4,.ant-list-item-meta-avatar
       color: #f5222d
+
+:where(.css-dev-only-do-not-override-1vr7spz).ant-list .ant-list-item
+  padding: 5px 0
