--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -159,7 +159,7 @@
   border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
   border-radius: var(--bs-btn-border-radius);
   background-color: var(--bs-btn-bg);
-  
+
   transition:
     color 0.15s ease-in-out,
     background-color 0.15s ease-in-out,
@@ -183,9 +183,44 @@
   --bs-btn-disabled-bg: #111bff;
   --bs-btn-disabled-border-color: #111bff;
 }
+
+.btn-danger {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #ff1f11;
+  --bs-btn-border-color: #ff1f11;
+  --bs-btn-hover-color: #ff1f11;
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: #ff1f11;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ff1f11;
+  --bs-btn-active-border-color: #ff1f11;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #ff1f11;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #ff1f11;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+
+.btn-link {
+  --bs-btn-font-weight: 400;
+  --bs-btn-color: #111bff;
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #0e17d9;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-active-color: #0e16cc;
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-border-color: transparent;
+  --bs-btn-box-shadow: 0 0 0 #000;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  text-decoration: none;
+}
 .btn-outline-primary {
-  --bs-btn-color: #111BFF;
-  --bs-btn-border-color: #111BFF;
+  --bs-btn-color: #111bff;
+  --bs-btn-border-color: #111bff;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #0e17d9;
   --bs-btn-hover-border-color: #0e17d9;
@@ -199,20 +234,98 @@
   --bs-btn-disabled-border-color: #111bff;
   --bs-gradient: none;
 }
-.btn-link {
-  --bs-btn-font-weight: 400;
-  --bs-btn-color: #111BFF;
-  --bs-btn-bg: transparent;
-  --bs-btn-border-color: transparent;
-  --bs-btn-hover-color: #0e17d9;
-  --bs-btn-hover-border-color: transparent;
-  --bs-btn-active-color: #0e16cc;
-  --bs-btn-active-border-color: transparent;
+.btn-outline-secondary {
+  --bs-btn-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-border-color: rgba(3, 4, 27, 0.1);
+  --bs-btn-hover-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: transparent;
+  --bs-btn-active-border-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #6c757d;
-  --bs-btn-disabled-border-color: transparent;
-  --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 49, 132, 253;
-  text-decoration: none;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #6c757d;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+.btn-outline-danger {
+  --bs-btn-color: #ff1f11;
+  --bs-btn-border-color: #ff1f11;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #ff1f11;
+  --bs-btn-hover-border-color: #ff1f11;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ff1f11;
+  --bs-btn-active-border-color: #ff1f11;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #ff1f11;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #ff1f11;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background: #fff;
+  box-shadow: 0px 4px 64px rgba(0, 0, 0, 0.03);
+  border-radius: 10px;
+  border: none;
+}
+.card-header {
+  background-color: #fff;
+  border-radius: 20px 20px 0 0;
+  padding: 25px 0 20px;
+  margin-right: 25px;
+  margin-left: 25px;
+  border-bottom: 1px solid rgba(3, 4, 27, 0.03);
+  .card-title {
+    margin: 0;
+  }
+  .card .card-body {
+    padding: 25px;
+  }
+}
+
+.modal-content {
+  border-radius: 10px;
+  box-shadow: 0px 4px 64px rgba(0, 0, 0, 0.03);
+  border: none;
+  .modal-header {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+    border-top-left-radius: calc(0.3rem - 1px);
+    border-top-right-radius: calc(0.3rem - 1px);
+    margin: 0 25px 0;
+    padding: 25px 0;
+    border-bottom: 1px solid rgba(3, 4, 27, 0.03);
+    .modal-title {
+      margin-bottom: 0;
+      line-height: 1.5;
+    }
+    .btn-close {
+      margin: -0.5rem auto -0.5rem 0;
+      background-size: 12px;
+      padding: 5px;
+      border-radius: 5px;
+    }
+  }
+  .modal-body {
+    padding: 25px;
+    font-weight: 400;
+    position: relative;
+    flex: 1 1 auto;
+  }
 }
 
 a {
