--- a/src/assets/scss/dashboard/dashboard.module.scss
+++ b/src/assets/scss/dashboard/dashboard.module.scss
@@ -197,6 +197,13 @@
   }
 }
 
+.custom-card {
+  background: #fff;
+  box-shadow: 0px 4px 64px rgba(0, 0, 0, 0.03);
+  border-radius: 10px;
+  border: none;
+}
+
 @media screen and (max-width: 991px) {
   .wrapper {
     .main-wrapper {
@@ -222,6 +229,27 @@
     &__subheader {
       display: flex;
       flex: 1 0 100%;
+    }
+  }
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    min-width: 300px;
+    max-width: 300px;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: all 0.4s ease-out 0.1s;
+    &.expanded {
+      transform: translateX(0);
+    }
+    &__close {
+      display: block;
+    }
+    &__navbar {
+      height: calc(100vh - 159px);
+      overflow-y: auto;
+      flex-wrap: nowrap;
     }
   }
 }
