--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -3,6 +3,9 @@
   position: relative;
   padding-bottom: 5px;
 
+  .ant-input {
+    font-family: var(--bs-font-shabnam);
+  }
   .ant-input-affix-wrapper.ant-input-affix-wrapper-lg {
     padding: 10px 11px;
   }
