--- a/src/pages/dashboard/buySell/styles.module.scss
+++ b/src/pages/dashboard/buySell/styles.module.scss
@@ -18,3 +18,13 @@
     background-color: #f8f8f8;
     border-radius: 10px;
 }
+.currencyExchangeAction{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    .btn{
+        width: 48%;
+    }
+}
