--- a/src/pages/dashboard/buySell/styles.module.scss
+++ b/src/pages/dashboard/buySell/styles.module.scss
@@ -1,30 +1,81 @@
-.formContainer{
-    
+.formContainer {
+}
+.amount {
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 12px;
+  padding: 5px;
+  margin-top: 0.5rem;
+  .title {
+    margin-right: 1rem;
+  }
+}
+.currencyExchangeAction {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  .btn {
+    width: 48%;
+  }
+}
 
-}
-.amount{
-    background-color: #f8f8f8;
-    border-radius: 10px;
-    display: flex;
-    flex-direction:column;
-    font-size: 12px;
-    padding: 5px;
-    margin-top: 0.5rem;
-    .title{
-        margin-right: 1rem;
-    }
-}
-.headerTable{
-    background-color: #f8f8f8;
-    border-radius: 10px;
-}
-.currencyExchangeAction{
-    display: flex;
+.wage {
+  overflow: auto;
+  margin-top: 1.5rem;
+  .table {
+    border-collapse: collapse;
+    font-weight: 100;
+    text-rendering: optimizeLegibility;
+    border-color: #e4e4e4;
+    color: #03041b;
+    margin: 0;
     width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1rem;
-    .btn{
-        width: 48%;
+    & > :not(caption) > * > * {
+      padding: 0.5rem 0.5rem;
+      background-color: transparent;
+      border-bottom-width: 1px;
+      box-shadow: inset 0 0 0 9999px transparent;
     }
+    & > :not(:first-child) {
+      border-top: unset;
+    }
+    thead {
+      background-color: #f8f8f8;
+      vertical-align: bottom;
+      border-radius: 10px;
+      th {
+        font-size: 0.875em;
+        font-weight: 500;
+        color: rgba(3, 4, 27, 0.4);
+        border: none;
+        &:first-child {
+          border-radius: 0 5px 5px 0;
+        }
+        &:last-child {
+          border-radius: 5px 0 0 5px;
+        }
+      }
+    }
+    tbody {
+      vertical-align: inherit;
+      tr {
+        td,
+        th {
+          line-height: 31px;
+          vertical-align: middle;
+          font-size: 0.75em;
+        }
+        &:last-child {
+          td,
+          th {
+            border-bottom: none;
+          }
+        }
+      }
+    }
+  }
 }
