fix rates and sync value

--- a/src/assets/scss/components/Input/exchangeInput.module.scss
+++ b/src/assets/scss/components/Input/exchangeInput.module.scss
@@ -5,6 +5,18 @@
   align-items: center;
   border-radius: 10px;
   padding: 10px;
+
+  &.has-error {
+    border-color: var(--bs-danger);
+    margin-bottom: 30px;
+  }
+
+  .error-text {
+    position: absolute;
+    top: 100%;
+    font-size: 0.75em;
+  }
+
   .input {
     display: block;
     width: 100%;
