--- a/src/assets/scss/_custome.scss
+++ b/src/assets/scss/_custome.scss
@@ -289,6 +289,75 @@ html {
   border-radius: 10px;
 }
 
+.btn-outline-success {
+  --bs-btn-color: #198754;
+  --bs-btn-border-color: #198754;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #198754;
+  --bs-btn-hover-border-color: #198754;
+  --bs-btn-focus-shadow-rgb: 25, 135, 84;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #198754;
+  --bs-btn-active-border-color: #198754;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #198754;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #198754;
+  --bs-gradient: none;
+}
+
+.btn-icon-danger {
+  --bs-btn-color: #ff1f11;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #ff1f11;
+  --bs-btn-hover-bg: rgba(211, 47, 47, 0.04);
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #ff1f11;
+  --bs-btn-active-bg: rgba(211, 47, 47, 0.04);
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #ff2111aa;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: transparent;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+.btn-icon-secondary {
+  --bs-btn-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-hover-bg: rgba(0, 0, 0, 0.04);
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: rgba(3, 4, 27, 0.4);
+  --bs-btn-active-bg: rgba(0, 0, 0, 0.04);
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgba(0, 0, 0, 0.26);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: transparent;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+.btn-icon-success{
+  --bs-btn-color: #198754;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #198754;
+  --bs-btn-hover-bg: rgba(46, 125, 50, 0.04);
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-active-color: #198754;
+  --bs-btn-active-bg: rgba(46, 125, 50, 0.04);
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgba(0, 0, 0, 0.26);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: transparent;
+  --bs-gradient: none;
+  border-radius: 10px;
+}
+
 .card {
   position: relative;
   display: flex;
