--- a/src/assets/scss/components/Input/ibanNumber.module.scss
+++ b/src/assets/scss/components/Input/ibanNumber.module.scss
@@ -1,9 +1,23 @@
-.input-control {
+.iban-input-control {
   position: relative;
+  direction: ltr;
   width: 100%;
+  span {
+    font-size: 0.75em;
+    font-weight: 400;
+    color: #03041b;
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    height: 12px;
+    line-height: 15px;
+    transform: translateY(-50%);
+    border-right: 1px solid rgba(3, 4, 27, 0.1);
+    padding-right: 12px;
+  }
   input {
+    padding-left: 50px;
     padding-right: 40px;
-    direction: ltr;
     &::after {
       content: "\00a0"; /* Unicode non-breaking space character */
       white-space: pre; /* Preserve whitespace */
@@ -13,20 +27,19 @@
   img {
     position: absolute;
     right: 12px;
-    height: 100%;
+    width: 30px !important;
+    height: auto;
+    top: 10px;
     line-height: 48px;
     font-size: 1.2rem;
     box-shadow: none;
     border-left-color: transparent;
-    border-radius: 10px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
     border: 0;
     z-index: 2;
     transition: all ease 200ms;
   }
   img {
-    width: 20px;
+    width: 20px !important;
     height: auto;
     opacity: 0.7;
     top: 10px;
