fix TRY Withdraw  (#63)

--- a/src/assets/scss/dashboard/wallet.module.scss
+++ b/src/assets/scss/dashboard/wallet.module.scss
@@ -187,6 +187,10 @@
   }
 }
 
+.lir-icon {
+  width: 20px !important;
+}
+
 @media screen and (max-width: 1399px) {
   .table-view tbody td {
     min-width: 140px;
